--- a/style.css
+++ b/style.css
@@ -196,6 +196,9 @@ table, th, td{
 }
 
 @media screen and (max-width: 450px){
+    body{
+        height: 100vh;
+    }
    
     .container-input, .container-result{
       border-top-right-radius: 10px;
